--- a/src/blocks/main/head.html
+++ b/src/blocks/main/head.html
@@ -11,6 +11,6 @@
     <!-- <link rel='icon' href='./favicon.png' /> -->
 
     <!-- Styles -->
-    <link rel="stylesheet" href="./css/style-min.css">
+    <link rel="stylesheet" href="./css/style.min.css">
 
 </head>
