--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-@@include('./blocks/main/_head.html', {
+@@include('./blocks/main/head.html', {
 "title": "Главная",
 })
 
@@ -15,7 +15,7 @@
 
 
     <!-- Scripts -->
-    @@include('./blocks/main/_js.html')
+    @@include('./blocks/main/js.html')
 
 </body>
 
