--- a/src/blocks/footer.html
+++ b/src/blocks/footer.html
@@ -1,10 +1,8 @@
 <!-- footer
 ======================================================= -->
 <footer class="footer">
-    <div class="container">
-        <div class="footer__inner">
+    <div class="inner">
 
-        </div>
     </div>
 </footer>
-<!-- footer End -->
+<!-- footer -->
