--- a/src/blocks/header.html
+++ b/src/blocks/header.html
@@ -1,69 +1,6 @@
 <!-- header
 ======================================================= -->
 <header class="header">
-    <div class="container">
-        <div class="menu">
-            <a href="#" class="logo block">
-                <img src="../img/logo.svg" alt="logo">
-                <div class="logo_text">
-                    <h5>itl.b2c</h5>
-                    <p>Готовый интернет-магазин</p>
-                </div>
-            </a>
 
-            <div class="btn block">
-                <i class="fa-regular fa-bars"></i>
-                <p>Каталог товаров</p>
-            </div>
-
-            <div class="input search block">
-                <input type="text" placeholder="Искать товар со скидками до 50%">
-                <i class="fa-regular fa-search"></i>
-            </div>
-
-            <div class="controls block">
-                <li class="control">
-                    <a href="#">
-                        <div class="icon">
-                            <i class="fa-regular fa-circle-user"></i>
-                        </div>
-                        <p>Войти</p>
-                    </a>
-                </li>
-                <li class="control">
-                    <a href="#">
-                        <div class="icon">
-                            <i class="fa-regular fa-heart"></i>
-                            <span>6</span>
-                        </div>
-                        <p>Избранное</p>
-                    </a>
-                </li>
-                <li class="control">
-                    <a href="#">
-                        <div class="icon">
-                            <i class="fa-regular fa-cart-arrow-down"></i>
-                            <span>6</span>
-                        </div>
-                        <p>954 870 ₸</p>
-                    </a>
-                </li>
-            </div>
-        </div>
-
-        <ul class="catalog">
-            <li><a href="#">Все акции</a></li>
-            <li><a href="#">OLED телевизоры</a></li>
-            <li><a href="#">Iphone 14</a></li>
-            <li><a href="#">Samsung S23</a></li>
-            <li><a href="#">Ноутбуки</a></li>
-            <li><a href="#">Кондиционеры</a></li>
-            <li><a href="#">Стиральные машины</a></li>
-            <li><a href="#">Гарантия низкой цены</a></li>
-            <li><a href="#">PlayStation 5</a></li>
-            <li><a href="#">Пылесосы Dyson</a></li>
-            <li><a href="#">Тренажеры</a></li>
-        </ul>
-    </div>
 </header>
-<!-- header End -->
+<!-- header -->
