--- a/src/blocks/main/head.html
+++ b/src/blocks/main/head.html
@@ -3,9 +3,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@@title</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="Dmitriy Bozhko / DIGIKRASH" />
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
+    <meta name="author" content="Dmitriy Bozhko"/>
 
     <!-- Favicon -->
     <!-- <link rel='icon' href='./favicon.png' /> -->
