--- a/src/blocks/main/head.html
+++ b/src/blocks/main/head.html
@@ -8,9 +8,8 @@
     <meta name="author" content="Dmitriy Bozhko"/>
 
     <!-- Favicon -->
-    <!-- <link rel='icon' href='./favicon.png' /> -->
+    <link rel='icon' href='./favicon.ico'/>
 
     <!-- Styles -->
     <link rel="stylesheet" href="./css/style.min.css">
-
 </head>
